--- a/BoWang/Base.lproj/Main.storyboard
+++ b/BoWang/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16D32" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="VgQ-QI-FY7">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="VgQ-QI-FY7">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -123,26 +123,6 @@
             </objects>
             <point key="canvasLocation" x="3135" y="3058"/>
         </scene>
-        <!--Share Bill-->
-        <scene sceneID="5Jx-ax-cdv">
-            <objects>
-                <viewController title="Share Bill" id="eb5-8F-K4F" customClass="FirstViewController" customModule="BoWang" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="mwZ-Tb-tyh"/>
-                        <viewControllerLayoutGuide type="bottom" id="VUy-sa-3xP"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="StH-g3-73T">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <tabBarItem key="tabBarItem" title="Share Bill" id="Qyc-sx-HnF"/>
-                    <navigationItem key="navigationItem" id="fwD-4F-oJd"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="BbA-Wb-zkA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2306" y="2827"/>
-        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="C6J-e6-A0t">
             <objects>
@@ -155,9 +135,9 @@
                     </tabBar>
                     <connections>
                         <segue destination="q6W-jY-2Zq" kind="relationship" relationship="viewControllers" id="rFa-PH-4jI"/>
-                        <segue destination="eb5-8F-K4F" kind="relationship" relationship="viewControllers" id="SAE-sx-koo"/>
                         <segue destination="2ju-ai-pEK" kind="relationship" relationship="viewControllers" id="bUd-d7-JXz"/>
                         <segue destination="6et-fj-3mh" kind="relationship" relationship="viewControllers" id="rHT-tU-AvQ"/>
+                        <segue destination="jmW-sL-Sn4" kind="relationship" relationship="viewControllers" id="kgA-uJ-Ypi"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="3mQ-v5-vxy" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -1039,6 +1019,54 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Zde-ZD-MqB" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="678" y="2765"/>
+        </scene>
+        <!--Share Bill-->
+        <scene sceneID="RdT-kM-fhz">
+            <objects>
+                <viewController title="Share Bill" id="jmW-sL-Sn4" customClass="ShareBill" customModule="BoWang" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="KLB-KU-d6q"/>
+                        <viewControllerLayoutGuide type="bottom" id="VWt-a4-U6M"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="s1w-Fo-hDr">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2er-bd-yR1">
+                                <rect key="frame" x="162" y="67" width="92" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="DJ8-c6-SIZ">
+                                <rect key="frame" x="0.0" y="20" width="375" height="29"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="top" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" lineBreakMode="wordWrap" numberOfLines="4" minimumScaleFactor="0.5" adjustsFontForContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="pKA-YB-IDl">
+                                <rect key="frame" x="8" y="96" width="359" height="241"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" name=".AppleSystemUIFont" family=".AppleSystemUIFont" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Share Bill" id="eHq-A2-Yo7"/>
+                    <navigationItem key="navigationItem" id="KbP-ox-bwd"/>
+                    <connections>
+                        <outlet property="SUM" destination="2er-bd-yR1" id="xJW-az-35Z"/>
+                        <outlet property="ShareBill" destination="pKA-YB-IDl" id="qX9-T1-ppP"/>
+                        <outlet property="hello" destination="DJ8-c6-SIZ" id="3DJ-Fi-Wh9"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GXb-Us-LSj" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2364" y="2803"/>
         </scene>
     </scenes>
     <inferredMetricsTieBreakers>
